--- a/index.html
+++ b/index.html
@@ -4,9 +4,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
+    <title>Falabella</title>
 </head>
 <body>
-    
+    <header>
+        <nav class="nav_top">
+            <div>
+                <a href="https://www.segurosfalabella.com/cl/" target="_blank">Seguros</a>
+                <a href="https://www.viajesfalabella.cl/" target="_blank">Viajes</a>
+                <a href="https://www.falabella.com/falabella-cl" target="_blank">Falabella</a>
+                <a href="https://sodimac.falabella.com/sodimac-cl" target="_blank">Sodimac</a>
+                <a href="https://tottus.falabella.com/tottus-cl" target="_blank">Tottus</a>
+                <a href="https://sodimac.falabella.com/sodimac-cl" target="_blank">Homy</a>
+                <a href="https://linio.falabella.com/linio-cl" target="_blank">Linio</a>
+                <a href="https://fpay.cl/" target="_blank">Fpay</a>
+                <a href="https://tottus.falabella.com/tottus-cl/page/fazil-app" target="_blank">Fazil</a>
+            </div>
+            <div>
+                <a href="" target="_blank"><img class="icon" src="img\iconos\circle-question-regular.svg" alt=""> Ayuda y Contacto</a>
+                <a href="" target="_blank"><img class="icon" src="img\iconos\ic-pin-white.svg" alt=""> Oficinas y cajeros</a>
+            </div>
+        </nav>
+        <nav class="main_nav">
+            <div>
+                <img src="img\logo-bf-cmr.svg" alt="logo">
+                <button>MI CUENTA</button>
+            </div>
+            <div>
+                <a href="">cuentas</a>
+                <a href="">tarjetas CMR</a>
+                <a href="">avance y súper avance</a>
+                <a href="">créditos</a>
+                <a href="">inversiones</a>
+                <a href="">seguros</a>
+                <a href="">descuentos</a>
+                <a href="">CMR puntos</a>
+                <a href="">portabilidad</a>
+            </div>
+        </nav>
+    </header>
 </body>
 </html>
