creación de elementos en HTML

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,42 +8,295 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Falabella</title>
 </head>
+
 <body>
     <header>
+        <!-- Primer navbar -->
         <nav class="nav_top">
             <div>
-                <a href="https://www.segurosfalabella.com/cl/" target="_blank">Seguros</a>
-                <a href="https://www.viajesfalabella.cl/" target="_blank">Viajes</a>
-                <a href="https://www.falabella.com/falabella-cl" target="_blank">Falabella</a>
-                <a href="https://sodimac.falabella.com/sodimac-cl" target="_blank">Sodimac</a>
-                <a href="https://tottus.falabella.com/tottus-cl" target="_blank">Tottus</a>
-                <a href="https://sodimac.falabella.com/sodimac-cl" target="_blank">Homy</a>
-                <a href="https://linio.falabella.com/linio-cl" target="_blank">Linio</a>
-                <a href="https://fpay.cl/" target="_blank">Fpay</a>
-                <a href="https://tottus.falabella.com/tottus-cl/page/fazil-app" target="_blank">Fazil</a>
+                <ul>
+                    <li>
+                        <a href="https://www.segurosfalabella.com/cl/" target="_blank">Seguros</a>
+                    </li>
+                    <li>
+                        <a href="https://www.viajesfalabella.cl/" target="_blank">Viajes</a>
+                    </li>
+                    <li>
+                        <a href="https://www.falabella.com/falabella-cl" target="_blank">Falabella</a>
+                    </li>
+                    <li>
+                        <a href="https://sodimac.falabella.com/sodimac-cl" target="_blank">Sodimac</a>
+                    </li>
+                    <li>
+                        <a href="https://tottus.falabella.com/tottus-cl" target="_blank">Tottus</a>
+                    </li>
+                    <li>
+                        <a href="https://sodimac.falabella.com/sodimac-cl" target="_blank">Homy</a>
+                    </li>
+                    <li>
+                        <a href="https://linio.falabella.com/linio-cl" target="_blank">Linio</a>
+                    </li>
+                    <li>
+                        <a href="https://fpay.cl/" target="_blank">Fpay</a>
+                    </li>
+                    <li>
+                        <a href="https://tottus.falabella.com/tottus-cl/page/fazil-app" target="_blank">Fazil</a>
+                    </li>
+                </ul>
             </div>
             <div>
-                <a href="" target="_blank"><img class="icon" src="img\iconos\circle-question-regular.svg" alt=""> Ayuda y Contacto</a>
-                <a href="" target="_blank"><img class="icon" src="img\iconos\ic-pin-white.svg" alt=""> Oficinas y cajeros</a>
+                <ul>
+                    <li>
+                        <a href="" target="_blank">
+                            <img class="icon" src="img\iconos\circle-question-regular.svg" alt=""> Ayuda y Contacto
+                        </a>
+                    </li>
+                    <li>
+                        <a href="" target="_blank">
+                            <img class="icon" src="img\iconos\ic-pin-white.svg" alt=""> Oficinas y cajeros
+                        </a>
+                    </li>
+                </ul>
             </div>
         </nav>
-        <nav class="main_nav">
-            <div>
+        <!-- Segundo navbar -->
+        <div class="main_nav">
+            <div class="first_line">
                 <img src="img\logo-bf-cmr.svg" alt="logo">
-                <button>MI CUENTA</button>
+                <button class="green_btn">mi cuenta</button>
             </div>
-            <div>
-                <a href="">cuentas</a>
-                <a href="">tarjetas CMR</a>
-                <a href="">avance y súper avance</a>
-                <a href="">créditos</a>
-                <a href="">inversiones</a>
-                <a href="">seguros</a>
-                <a href="">descuentos</a>
-                <a href="">CMR puntos</a>
-                <a href="">portabilidad</a>
-            </div>
-        </nav>
+            <nav class="second_line">
+                <ul>
+                    <li>
+                        <a href="">cuentas</a> |
+                    </li>
+                    <li>
+                        <a href="">tarjetas CMR</a> |
+                    </li>
+                    <li>
+                        <a href="">avance y súper avance</a> |
+                    </li>
+                    <li>
+                        <a href="">créditos</a> |
+                    </li>
+                    <li>
+                        <a href="">inversiones</a> |
+                    </li>
+                    <li>
+                        <a href="">seguros</a> |
+                    </li>
+                    <li>
+                        <a href="">descuentos</a> |
+                    </li>
+                    <li>
+                        <a href="">CMR puntos</a> |
+                    </li>
+                    <li>
+                        <a href="">portabilidad</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
     </header>
+
+    <div id="container">
+        <div class="slide_section">
+            <div class="slide">
+                <ul>
+                    <li>
+                        <div class="slide_content content_one">
+                            <img class="slide_img" src="img/slide/apertura-cmr-mujer-mobile.png" alt="">
+                            <div class="slide_text">
+                                <h2>Únete al Banco de los Gennials</h2>
+                                <p>¡Pide tu CMR 100% Digital y en menos de 5 minutos!</p>
+                                <button class="green_btn">ábrela aquí</button>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="slide_content content_two">
+                            <img class="slide_img" src="img\slide\vitrina-desktop_feb.png" alt="">
+                            <div class="slide_text">
+                                <h2>¡La cuenta corriente de los Gennials!</h2>
+                                <p>¡Abre tu Cuenta Corriente 100% digital! ¡Hazlo en 5 minutos!</p>
+                                <button class="green_btn">pídela aquí</button>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+                <div class="slide_btn">
+                    <button class="previous_btn">
+                        <img src="img\ic-next-slide.svg" alt="">
+                    </button>
+                    <button class="next_btn">
+                        <img src="img\ic-next-slide.svg" alt="">
+                    </button>
+                </div>
+            </div>
+        </div>
+        <!-- Formulario credito de consumo -->
+        <div class="form_section">
+            <div class="credit_form">
+                <label for="" nombre="creditSimulation">Simula tu Crédito de Consumo</label>
+                <input type="text" placeholder="Ingresa tu RUT" />
+                <button type="submit" class="green_btn">simular</button>
+            </div>
+        </div>
+        <!-- primer slide de ofertas -->
+        <div class="card_slide_section">
+            <a href="">
+                <div class="card">
+                    <img src="img\cardSlide_img\img1.png" alt="">
+                    <div class="card_text">
+                        <h2>Abre tu Cuenta Corriente 100% online</h2>
+                        <p>Haz Click aquí y comienza a disfrutar de todos sus beneficios</p>
+                    </div>
+                </div>
+            </a>
+            <a href="">
+                <div class="card">
+                    <img src="img\cardSlide_img\img2.png" alt="">
+                    <div class="card_text">
+                        <h2>¡Tenemos tasas increíbles en depósito a plazo!</h2>
+                        <p>Aprovecha, toma tu depósito a plazo (DAP) presionando acá ¡Y sácale partido a tus ahorros!
+                        </p>
+                    </div>
+                </div>
+            </a>
+            <a href="">
+                <div class="card">
+                    <img src="img\cardSlide_img\img3.png" alt="">
+                    <div class="card_text">
+                        <h2>¡Pide hoy tu avance!</h2>
+                        <p>Simula y pídelo 100% online. ¡Obtenlo directo en tu cuenta!</p>
+                    </div>
+                </div>
+            </a>
+        </div>
+    </div>
+
+    <!-- grupo de cards con anuncios -->
+    <div class="card_section">
+        <div class="column">
+            <div class="anounce_card">
+                <h3>¡Ya comenzó el Black Friday en Banco Falabella!</h3>
+                <p>¡Encuentra descuentos y promociones increíbles en nuestro Black Friday</p>
+                <div class="green_btn">ir al blackfriday</div>
+            </div>
+            <div class="anounce_card    ">
+                <img src="img\cards_img\img1.png" alt="">
+            </div>
+        </div>
+    </div>
+
+    <!-- segundo slide de ofertas -->
+    <div class="card_slide_section">
+        <a href="">
+            <div class="card">
+                <img src="img\cardSlide_img\img2_1.png" alt="">
+                <div class="card_text">
+                    <h2>Abre tu Cuenta Corriente 100% online</h2>
+                    <p>Haz Click aquí y comienza a disfrutar de todos sus beneficios</p>
+                </div>
+            </div>
+        </a>
+        <a href="">
+            <div class="card">
+                <img src="img\cardSlide_img\img2_2.png" alt="">
+                <div class="card_text">
+                    <h2>¡Tenemos tasas increíbles en depósito a plazo!</h2>
+                    <p>Aprovecha, toma tu depósito a plazo (DAP) presionando acá ¡Y sácale partido a tus ahorros!</p>
+                </div>
+            </div>
+        </a>
+        <a href="">
+            <div class="card">
+                <img src="img\cardSlide_img\img2_3.png" alt="">
+                <div class="card_text">
+                    <h2>¡Pide hoy tu avance!</h2>
+                    <p>Simula y pídelo 100% online. ¡Obtenlo directo en tu cuenta!</p>
+                </div>
+            </div>
+        </a>
+    </div>
+    </div>
+
+    <footer>
+        <div>
+            <h4>nuestro banco</h4>
+            <ul>
+                <li>
+                    Quienes somos
+                </li>
+                <li>
+                    Directorio
+                </li>
+                <li>
+                    Administración
+                </li>
+                <li>
+                    Información institucional
+                </li>
+                <li>
+                    Documentos legales
+                </li>
+                <li>
+                    Tasas y Tarifas
+                </li>
+                <li>
+                    Trabaja con nosotros
+                </li>
+                <li>
+                    Licitación Seguro Hipotecario
+                </li>
+                <li>
+                    FATCA
+                </li>
+                <li>
+                    Canal de integridad
+                </li>
+                <li>
+                    Proveedores Portabilidad Financiera
+                </li>
+            </ul>
+        </div>
+        <div>
+            <h4>servicio al cliente</h4>
+            <ul>
+                <li>
+                    Preguntas Frecuentes
+                </li>
+                <li>
+                    Ayuda y Contacto
+                </li>
+                <li>
+                    Tutoriales Banco Falabella
+                </li>
+                <li>
+                    Oficinas y Cajeros
+                </li>
+                <li>
+                    Protocolo COVID-19
+                </li>
+                <li>
+                    Portal Empresas
+                </li>
+                <li>
+                    Defensoría del Cliente
+                </li>
+            </ul>
+        </div>
+
+        <p>Infórmese sobre las entidades autorizadas para emitir Tarjetas de Pago en el país, quienes se encuentran inscritas en los Registros de Emisores de Tarjetas que lleva la CMF, en <a href="https://www.cmfchile.cl/portal/principal/613/w3-channel.html">www.cmfchile.cl</a></p>
+        <p>Infórmese sobre la garantía estatal de los depósitos en su banco o en <a href="https://www.cmfchile.cl/portal/principal/613/w3-channel.html">cmfchile.cl</a> © 2020 Banco Falabella. Todos los derechos reservados. Moneda 970, piso 7, Santiago.</p>
+
+        <div class="whatsapp">
+            <a href="https://api.whatsapp.com/send?phone=56223906000&text=Hola%2C%20estaba%20en%20la%20web%20y%20necesito%20ayuda">
+                <img src="img\iconos\WhatsApp.svg.png" alt="icono whatsapp">
+                <span>Haz tus consultas por WhatsApp al +56 22 390 6000, o haz clic aquí para ir a WhatsApp Web</span>
+            </a>
+        </div>
+    </footer>
 </body>
+
 </html>
