estilo del footer, creo un sistema grid

--- a/index.html
+++ b/index.html
@@ -222,76 +222,119 @@
     </div>
 
     <footer>
-        <div>
+        <div class="nav_list">
             <h4>nuestro banco</h4>
             <ul>
                 <li>
-                    Quienes somos
+                    <a href="">
+                        Quienes somos
+                    </a>
                 </li>
                 <li>
-                    Directorio
+                    <a href="">
+                        Directorio
+                    </a>
                 </li>
                 <li>
-                    Administración
+                    <a href="">
+                        Administración
+                    </a>
                 </li>
                 <li>
-                    Información institucional
+                    <a href="">
+                        Información institucional
+                    </a>
                 </li>
                 <li>
-                    Documentos legales
+                    <a href="">
+                        Documentos legales
+                    </a>
                 </li>
                 <li>
-                    Tasas y Tarifas
+                    <a href="">
+                        Tasas y Tarifas
+                    </a>
                 </li>
                 <li>
-                    Trabaja con nosotros
+                    <a href="">
+                        Trabaja con nosotros
+                    </a>
                 </li>
                 <li>
-                    Licitación Seguro Hipotecario
+                    <a href="">
+                        Licitación Seguro Hipotecario
+                    </a>
                 </li>
                 <li>
-                    FATCA
+                    <a href="">
+                        FATCA
+                    </a>
                 </li>
                 <li>
-                    Canal de integridad
+                    <a href="">
+                        Canal de integridad
+                    </a>
                 </li>
                 <li>
-                    Proveedores Portabilidad Financiera
+                    <a href="">
+                        Proveedores Portabilidad Financiera
+                    </a>
                 </li>
             </ul>
         </div>
-        <div>
+        <div class="nav_list">
             <h4>servicio al cliente</h4>
             <ul>
                 <li>
-                    Preguntas Frecuentes
+                    <a href="">
+                        Preguntas Frecuentes
+                    </a>
                 </li>
                 <li>
-                    Ayuda y Contacto
+                    <a href="">
+                        Ayuda y Contacto
+                    </a>
                 </li>
                 <li>
-                    Tutoriales Banco Falabella
+                    <a href="">
+                        Tutoriales Banco Falabella
+                    </a>
                 </li>
                 <li>
-                    Oficinas y Cajeros
+                    <a href="">
+                        Oficinas y Cajeros
+                    </a>
                 </li>
                 <li>
-                    Protocolo COVID-19
+                    <a href="">
+                        Protocolo COVID-19
+                    </a>
                 </li>
                 <li>
-                    Portal Empresas
+                    <a href="">
+                        Portal Empresas
+                    </a>
                 </li>
                 <li>
-                    Defensoría del Cliente
+                    <a href="">
+                        Defensoría del Cliente
+                    </a>
                 </li>
             </ul>
         </div>
 
-        <p>Infórmese sobre las entidades autorizadas para emitir Tarjetas de Pago en el país, quienes se encuentran inscritas en los Registros de Emisores de Tarjetas que lleva la CMF, en <a href="https://www.cmfchile.cl/portal/principal/613/w3-channel.html">www.cmfchile.cl</a></p>
-        <p>Infórmese sobre la garantía estatal de los depósitos en su banco o en <a href="https://www.cmfchile.cl/portal/principal/613/w3-channel.html">cmfchile.cl</a> © 2020 Banco Falabella. Todos los derechos reservados. Moneda 970, piso 7, Santiago.</p>
+        <div class="end_paragraph">
+            <p>Infórmese sobre las entidades autorizadas para emitir Tarjetas de Pago en el país, quienes se encuentran
+                inscritas en los Registros de Emisores de Tarjetas que lleva la CMF, en <a
+                    href="https://www.cmfchile.cl/portal/principal/613/w3-channel.html">www.cmfchile.cl</a></p>
+            <p>Infórmese sobre la garantía estatal de los depósitos en su banco o en <a
+                    href="https://www.cmfchile.cl/portal/principal/613/w3-channel.html">cmfchile.cl</a> © 2020 Banco
+                Falabella. Todos los derechos reservados. Moneda 970, piso 7, Santiago.</p>
+        </div>
 
         <div class="whatsapp">
-            <a href="https://api.whatsapp.com/send?phone=56223906000&text=Hola%2C%20estaba%20en%20la%20web%20y%20necesito%20ayuda">
+            <a
+                href="https://api.whatsapp.com/send?phone=56223906000&text=Hola%2C%20estaba%20en%20la%20web%20y%20necesito%20ayuda">
                 <img src="img\iconos\WhatsApp.svg.png" alt="icono whatsapp">
                 <span>Haz tus consultas por WhatsApp al +56 22 390 6000, o haz clic aquí para ir a WhatsApp Web</span>
             </a>
