agrego botones y estilos en botones

--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
             <div>
                 <ul>
                     <li>
-                        <a href="" target="_blank">
+                        <a href="https://www.bancofalabella.cl/ayuda-y-contacto">
                             <img class="icon" src="img\iconos\circle-question-regular.svg" alt=""> Ayuda y Contacto
                         </a>
                     </li>
                     <li>
-                        <a href="" target="_blank">
+                        <a href="https://www.bancofalabella.cl/oficinas" target="_blank">
                             <img class="icon" src="img\iconos\ic-pin-white.svg" alt=""> Oficinas y cajeros
                         </a>
                     </li>
@@ -103,24 +103,15 @@
         <div class="slide">
             <ul>
                 <li>
-                    <div class="slide_content content_one">
+                    <div class="slide_content" id="first">
                         <img class="slide_img" src="img/slide/apertura-cmr-mujer-mobile.png" alt="">
                         <div class="slide_text">
                             <div>
                                 <h2>Únete al Banco de los Gennials</h2>
                                 <p>¡Pide tu CMR 100% Digital y en menos de 5 minutos!</p>
-                                <button class="green_btn">ábrela aquí</button>
-                            </div>    
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class="slide_content content_two">
-                        <img class="slide_img" src="img\slide\vitrina-desktop_feb.png" alt="">
-                        <div class="slide_text">
-                            <h2>¡La cuenta corriente de los Gennials!</h2>
-                            <p>¡Abre tu Cuenta Corriente 100% digital! ¡Hazlo en 5 minutos!</p>
-                            <button class="green_btn">pídela aquí</button>
+                                <a href="https://solicitudes.bancofalabella.cl/?detalleClic=apertura_cmr_banner_home"
+                                    target="_blank"><button class="green_btn">ábrela aquí</button></a>
+                            </div>
                         </div>
                     </div>
                 </li>
@@ -133,8 +124,15 @@
                     <img src="img\ic-next-slide.svg" alt="">
                 </button>
             </div>
+            <div class="slide_active">
+                <div class="active"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+            </div>
         </div>
     </div>
+
     <div class="container border_screen">
         <!-- Formulario credito de consumo -->
         <div class="form_section">
@@ -195,7 +193,7 @@
                 </div>
                 <div class="anounce_card">
                     <div class="card_text">
-                    <h3>¡Ya comenzó el Black Friday en Banco Falabella!</h3>
+                        <h3>¡Ya comenzó el Black Friday en Banco Falabella!</h3>
                         <p>¡Encuentra descuentos y promociones increíbles en nuestro Black Friday</p>
                         <button class="green_btn">ir al blackfriday</button>
                     </div>
@@ -204,31 +202,7 @@
             <div class="row section">
                 <div class="anounce_card">
                     <div class="card_text">
-                    <h3>¡Ya comenzó el Black Friday en Banco Falabella!</h3>
-                        <p>¡Encuentra descuentos y promociones increíbles en nuestro Black Friday</p>
-                        <button class="green_btn">ir al blackfriday</button>
-                    </div>
-                </div>
-                <div class="anounce_card">
-                    <img src="img\cards_img\img1.png" alt="">
-                </div>
-            </div>
-            <div class="row section">
-                <div class="anounce_card">
-                    <img src="img\cards_img\img1.png" alt="">
-                </div>
-                <div class="anounce_card">
-                    <div class="card_text">
-                    <h3>¡Ya comenzó el Black Friday en Banco Falabella!</h3>
-                        <p>¡Encuentra descuentos y promociones increíbles en nuestro Black Friday</p>
-                        <button class="green_btn">ir al blackfriday</button>
-                    </div>
-                </div>
-            </div>
-            <div class="row section">
-                <div class="anounce_card">
-                    <div class="card_text">
-                    <h3>¡Ya comenzó el Black Friday en Banco Falabella!</h3>
+                        <h3>¡Ya comenzó el Black Friday en Banco Falabella!</h3>
                         <p>¡Encuentra descuentos y promociones increíbles en nuestro Black Friday</p>
                         <button class="green_btn">ir al blackfriday</button>
                     </div>
@@ -243,7 +217,7 @@
                 </div>
                 <div class="anounce_card">
                     <div class="card_text">
-                    <h3>¡Ya comenzó el Black Friday en Banco Falabella!</h3>
+                        <h3>¡Ya comenzó el Black Friday en Banco Falabella!</h3>
                         <p>¡Encuentra descuentos y promociones increíbles en nuestro Black Friday</p>
                         <button class="green_btn">ir al blackfriday</button>
                     </div>
@@ -252,7 +226,31 @@
             <div class="row section">
                 <div class="anounce_card">
                     <div class="card_text">
-                    <h3>¡Ya comenzó el Black Friday en Banco Falabella!</h3>
+                        <h3>¡Ya comenzó el Black Friday en Banco Falabella!</h3>
+                        <p>¡Encuentra descuentos y promociones increíbles en nuestro Black Friday</p>
+                        <button class="green_btn">ir al blackfriday</button>
+                    </div>
+                </div>
+                <div class="anounce_card">
+                    <img src="img\cards_img\img1.png" alt="">
+                </div>
+            </div>
+            <div class="row section">
+                <div class="anounce_card">
+                    <img src="img\cards_img\img1.png" alt="">
+                </div>
+                <div class="anounce_card">
+                    <div class="card_text">
+                        <h3>¡Ya comenzó el Black Friday en Banco Falabella!</h3>
+                        <p>¡Encuentra descuentos y promociones increíbles en nuestro Black Friday</p>
+                        <button class="green_btn">ir al blackfriday</button>
+                    </div>
+                </div>
+            </div>
+            <div class="row section">
+                <div class="anounce_card">
+                    <div class="card_text">
+                        <h3>¡Ya comenzó el Black Friday en Banco Falabella!</h3>
                         <p>¡Encuentra descuentos y promociones increíbles en nuestro Black Friday</p>
                         <button class="green_btn">ir al blackfriday</button>
                     </div>
@@ -264,34 +262,42 @@
         </div>
 
         <!-- segundo slide de ofertas -->
-        <div class="card_slide_section section">
-            <a href="">
-                <div class="card">
-                    <img src="img\cardSlide_img\img2_1.png" alt="">
-                    <div class="card_text">
-                        <h2>Abre tu Cuenta Corriente 100% online</h2>
-                        <p>Haz Click aquí y comienza a disfrutar de todos sus beneficios</p>
+        <div>
+            <div class="card_slide_section section">
+                <a href="">
+                    <div class="card">
+                        <img src="img\cardSlide_img\img2_1.png" alt="">
+                        <div class="card_text">
+                            <h2>Abre tu Cuenta Corriente 100% online</h2>
+                            <p>Haz Click aquí y comienza a disfrutar de todos sus beneficios</p>
+                        </div>
                     </div>
-                </div>
-            </a>
-            <a href="">
-                <div class="card">
-                    <img src="img\cardSlide_img\img2_2.png" alt="">
-                    <div class="card_text">
-                        <h2>¡Tenemos tasas increíbles en depósito a plazo!</h2>
-                        <p>Aprovecha, toma tu depósito a plazo (DAP) presionando acá ¡Y sácale partido a tus ahorros!</p>
+                </a>
+                <a href="">
+                    <div class="card">
+                        <img src="img\cardSlide_img\img2_2.png" alt="">
+                        <div class="card_text">
+                            <h2>¡Tenemos tasas increíbles en depósito a plazo!</h2>
+                            <p>Aprovecha, toma tu depósito a plazo (DAP) presionando acá ¡Y sácale partido a tus
+                                ahorros!</p>
+                        </div>
                     </div>
-                </div>
-            </a>
-            <a href="">
-                <div class="card">
-                    <img src="img\cardSlide_img\img2_3.png" alt="">
-                    <div class="card_text">
-                        <h2>¡Pide hoy tu avance!</h2>
-                        <p>Simula y pídelo 100% online. ¡Obtenlo directo en tu cuenta!</p>
+                </a>
+                <a href="">
+                    <div class="card">
+                        <img src="img\cardSlide_img\img2_3.png" alt="">
+                        <div class="card_text">
+                            <h2>¡Pide hoy tu avance!</h2>
+                            <p>Simula y pídelo 100% online. ¡Obtenlo directo en tu cuenta!</p>
+                        </div>
                     </div>
-                </div>
-            </a>
+                </a>
+            </div>
+            <div class="slide_card">
+                <div class="dot_active"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+            </div>
         </div>
 
         <div class="card_section">
@@ -416,24 +422,43 @@
         <div class="contacto">
             <button>
                 <a href="https://www.bancofalabella.cl/ayuda-y-contacto" target="_blank">
-                    <svg _ngcontent-ymg-c97="" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path _ngcontent-ymg-c97="" d="M0 0h24v24H0z" fill="none"></path><path _ngcontent-ymg-c97="" d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"></path></svg>
+                    <svg _ngcontent-ymg-c97="" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <path _ngcontent-ymg-c97="" d="M0 0h24v24H0z" fill="none"></path>
+                        <path _ngcontent-ymg-c97=""
+                            d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z">
+                        </path>
+                    </svg>
                     <span>Robo o extravío</span>
                 </a>
             </button>
             <div class="rrss">
                 <a href="https://www.facebook.com/bancofalabellaCMR/" target="_blank">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M21.6,1.2H2.4c-0.7,0-1.2,0.5-1.2,1.2v19.2c0,0.7,0.5,1.2,1.2,1.2h10.3v-8.4H9.9v-3.3h2.8V8.8
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                        <path d="M21.6,1.2H2.4c-0.7,0-1.2,0.5-1.2,1.2v19.2c0,0.7,0.5,1.2,1.2,1.2h10.3v-8.4H9.9v-3.3h2.8V8.8
                         c0-2.8,1.7-4.3,4.2-4.3c1.2,0,2.2,0.1,2.5,0.1v2.9l-1.7,0c-1.4,0-1.6,0.6-1.6,1.6v2.1h3.2l-0.4,3.3h-2.8v8.4h5.5
-                        c0.7,0,1.2-0.5,1.2-1.2V2.4C22.8,1.7,22.3,1.2,21.6,1.2z"></path></svg>
+                        c0.7,0,1.2-0.5,1.2-1.2V2.4C22.8,1.7,22.3,1.2,21.6,1.2z"></path>
+                    </svg>
                 </a>
                 <a href="https://twitter.com/Banco_Falabella" target="_blank">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M20.8 7.5v.6c0 6-4.6 12.9-12.9 12.9-2.6 0-4.9-.8-6.9-2h1c2.1 0 4.1-.7 5.6-1.9-2 0-3.7-1.3-4.2-3.1h.9c.4 0 .8-.1 1.2-.2-2.1-.4-3.6-2.2-3.6-4.4v-.1c.6.3 1.3.5 2.1.6-1.2-.8-2-2.2-2-3.8 0-.8.2-1.6.6-2.3 2.2 2.7 5.6 4.5 9.3 4.7-.1-.3-.1-.7-.1-1 0-2.5 2-4.5 4.5-4.5 1.3 0 2.5.5 3.3 1.4 1-.2 2-.6 2.9-1.1-.3 1.1-1.1 1.9-2 2.5.9-.1 1.8-.4 2.6-.7-.7 1-1.4 1.8-2.3 2.4z"></path></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                        <path
+                            d="M20.8 7.5v.6c0 6-4.6 12.9-12.9 12.9-2.6 0-4.9-.8-6.9-2h1c2.1 0 4.1-.7 5.6-1.9-2 0-3.7-1.3-4.2-3.1h.9c.4 0 .8-.1 1.2-.2-2.1-.4-3.6-2.2-3.6-4.4v-.1c.6.3 1.3.5 2.1.6-1.2-.8-2-2.2-2-3.8 0-.8.2-1.6.6-2.3 2.2 2.7 5.6 4.5 9.3 4.7-.1-.3-.1-.7-.1-1 0-2.5 2-4.5 4.5-4.5 1.3 0 2.5.5 3.3 1.4 1-.2 2-.6 2.9-1.1-.3 1.1-1.1 1.9-2 2.5.9-.1 1.8-.4 2.6-.7-.7 1-1.4 1.8-2.3 2.4z">
+                        </path>
+                    </svg>
                 </a>
                 <a href="https://www.instagram.com/bancofalabellacmr/" target="_blank">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M21.23 0H2.769A2.77 2.77 0 0 0 0 2.769v18.459A2.77 2.77 0 0 0 2.769 24h18.463C22.762 24 24 22.76 24 21.229V2.769A2.768 2.768 0 0 0 21.23 0zM12 7.385a4.615 4.615 0 1 1 .002 9.23A4.615 4.615 0 0 1 12 7.385zm9 12.693a.923.923 0 0 1-.924.922H3.924A.923.923 0 0 1 3 20.078V10h1.897a7.56 7.56 0 0 0-.2.971c-.05.337-.081.679-.081 1.029a7.384 7.384 0 1 0 14.768 0c0-.35-.03-.692-.081-1.028a7.557 7.557 0 0 0-.199-.971H21v10.077zm0-13.98a.924.924 0 0 1-.924.923h-2.174a.923.923 0 0 1-.924-.923V3.923c0-.51.412-.923.924-.923h2.174c.511 0 .924.413.924.923v2.175z"></path></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                        <path
+                            d="M21.23 0H2.769A2.77 2.77 0 0 0 0 2.769v18.459A2.77 2.77 0 0 0 2.769 24h18.463C22.762 24 24 22.76 24 21.229V2.769A2.768 2.768 0 0 0 21.23 0zM12 7.385a4.615 4.615 0 1 1 .002 9.23A4.615 4.615 0 0 1 12 7.385zm9 12.693a.923.923 0 0 1-.924.922H3.924A.923.923 0 0 1 3 20.078V10h1.897a7.56 7.56 0 0 0-.2.971c-.05.337-.081.679-.081 1.029a7.384 7.384 0 1 0 14.768 0c0-.35-.03-.692-.081-1.028a7.557 7.557 0 0 0-.199-.971H21v10.077zm0-13.98a.924.924 0 0 1-.924.923h-2.174a.923.923 0 0 1-.924-.923V3.923c0-.51.412-.923.924-.923h2.174c.511 0 .924.413.924.923v2.175z">
+                        </path>
+                    </svg>
                 </a>
                 <a href="https://www.youtube.com/user/BancoFalabellaChile" target="_blank">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 2.8C.2 2.8 0 3.8 0 12s.2 9.2 12 9.2 12-1 12-9.2-.2-9.2-12-9.2zm3.8 9.6l-5.4 2.5c-.5.2-.9 0-.9-.5V9.6c0-.5.4-.8.9-.5l5.4 2.5c.5.2.5.6 0 .8z"></path></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                        <path
+                            d="M12 2.8C.2 2.8 0 3.8 0 12s.2 9.2 12 9.2 12-1 12-9.2-.2-9.2-12-9.2zm3.8 9.6l-5.4 2.5c-.5.2-.9 0-.9-.5V9.6c0-.5.4-.8.9-.5l5.4 2.5c.5.2.5.6 0 .8z">
+                        </path>
+                    </svg>
                 </a>
             </div>
         </div>
