--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
         </div>
     </header>
 
+    <!-- carrusel -->
     <div class="slide_section">
         <div class="slide">
             <ul>
@@ -120,6 +121,8 @@
                 <button class="previous_btn">
                     <img src="img\ic-next-slide.svg" alt="">
                 </button>
+            </div>
+            <div class="slide_btn_next">
                 <button class="next_btn">
                     <img src="img\ic-next-slide.svg" alt="">
                 </button>
